@@ -39,6 +39,8 @@ package com.sun.jersey.impl.container.grizzly.web;
 
 import com.sun.jersey.api.client.Client;
 import com.sun.jersey.api.client.WebResource;
+import com.sun.jersey.api.core.DefaultResourceConfig;
+import com.sun.jersey.api.core.ResourceConfig;
 import com.sun.jersey.spi.container.servlet.ServletContainer;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -48,6 +50,7 @@ import javax.ws.rs.GET;
 import javax.ws.rs.Produces;
 import javax.ws.rs.Path;
 import javax.ws.rs.core.Application;
+import javax.ws.rs.core.Context;
 
 /**
  *
@@ -73,38 +76,114 @@ public class ApplicationTest extends AbstractGrizzlyWebContainerTester {
         }
         
     }
-    
+
+    public static class ResourceConfigApp extends DefaultResourceConfig {
+        public ResourceConfigApp() {
+            getClasses().add(Resource.class);
+        }
+    }
+
     @Path("/")
     public static class Resource {
         
         @GET
         @Produces("text/plain")
-        public String get() {
-            return "get";
+        public String get(@Context ResourceConfig rc) {
+            assertTrue(rc.getFeature("feature"));
+            return rc.getProperty("property").toString();
         }
     }
     
-    public void testWithResourceConfigPropertyName() {
+    public void testAppWithResourceConfigPropertyName() {
         Map<String, String> initParams = new HashMap<String, String>();
         initParams.put(ServletContainer.RESOURCE_CONFIG_CLASS, App.class.getName());
+        initParams.put("property", "test");
+        initParams.put("feature", "true");
 
         startServer(initParams);
 
         WebResource r = Client.create().resource(getUri().
                 path("/").build());
 
-        assertEquals("get", r.get(String.class));
+        assertEquals("test", r.get(String.class));
     }
 
-    public void testWithApplicationPropertyName() {
+    public void testAppWithApplicationPropertyName() {
         Map<String, String> initParams = new HashMap<String, String>();
         initParams.put("javax.ws.rs.Application", App.class.getName());
+        initParams.put("property", "test");
+        initParams.put("feature", "true");
 
         startServer(initParams);
 
         WebResource r = Client.create().resource(getUri().
                 path("/").build());
 
-        assertEquals("get", r.get(String.class));
+        assertEquals("test", r.get(String.class));
+    }
+
+
+    public void testResourceConfgiWithResourceConfigPropertyName() {
+        Map<String, String> initParams = new HashMap<String, String>();
+        initParams.put(ServletContainer.RESOURCE_CONFIG_CLASS, ResourceConfigApp.class.getName());
+        initParams.put("property", "test");
+        initParams.put("feature", "true");
+
+        startServer(initParams);
+
+        WebResource r = Client.create().resource(getUri().
+                path("/").build());
+
+        assertEquals("test", r.get(String.class));
+    }
+
+    public void testResourceConfgiWithApplicationPropertyName() {
+        Map<String, String> initParams = new HashMap<String, String>();
+        initParams.put("javax.ws.rs.Application", ResourceConfigApp.class.getName());
+        initParams.put("property", "test");
+        initParams.put("feature", "true");
+
+        startServer(initParams);
+
+        WebResource r = Client.create().resource(getUri().
+                path("/").build());
+
+        assertEquals("test", r.get(String.class));
+    }
+
+
+    public static class OverridePropertyApp extends DefaultResourceConfig {
+        public OverridePropertyApp() {
+            getClasses().add(ResourceOverride.class);
+            getProperties().put("property", "override");
+            getFeatures().put("overridefeature", false);
+        }
+    }
+
+    @Path("/")
+    public static class ResourceOverride {
+
+        @GET
+        @Produces("text/plain")
+        public String get(@Context ResourceConfig rc) {
+            assertFalse(rc.getFeature("overridefeature"));
+            assertTrue(rc.getFeature("feature"));
+            return rc.getProperty("property").toString();
+        }
+    }
+
+    public void tesOverrideProperty() {
+        Map<String, String> initParams = new HashMap<String, String>();
+        initParams.put(ServletContainer.RESOURCE_CONFIG_CLASS, OverridePropertyApp.class.getName());
+        initParams.put("property", "test");
+        initParams.put("feature", "true");
+        initParams.put("overridefeature", "true");
+
+        startServer(initParams);
+
+        WebResource r = Client.create().resource(getUri().
+                path("/").build());
+
+        assertEquals("override", r.get(String.class));
     }
 }
